[package]
name = "connect-four"
version = "0.1.0"
authors = ["Ulysse Buonomo <buonomo.ulysse@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.7"
oorandom = "11.1.3"
getrandom = "0.2.3"
mint = "0.5.8"

[[bin]]
name = "connect-four"
path = "main.rs"
